Fix z-index of connection settings button during connection state

--- a/styles.css
+++ b/styles.css
@@ -134,6 +134,7 @@ body[data-connecting="false"] #connectionStatus{
     font-size: 0.8em;
     color: #1185dc;
     transition: transform 0.3s linear;
+    z-index: 2;
 }
 
 #settingsPanel{
